force-app/main/default/objects/FactoringRequest__c/FactoringRequest__c.object-meta.xml
<CustomObject>
    <label>Factoring Request</label>
    <nameField>
        <displayFormat>FREQ#{000000}</displayFormat>
        <label>Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Factoring Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>