force-app/main/default/objects/FactoringRequest__c/fields/DirectorateNumber__c.field-meta.xml
<CustomField>
    <fullName>DirectorateNumber__c</fullName>
    <label>Directorate #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>