force-app/main/default/objects/FactoringRequest__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>