force-app/main/default/objects/FactoringRequest__c/fields/Fon__c.field-meta.xml
<CustomField>
    <fullName>Fon__c</fullName>
    <label>Fon</label>
    <type>Phone</type>
</CustomField>