force-app/main/default/objects/FactoringRequest__c/fields/GrossTurnover__c.field-meta.xml
<CustomField>
    <fullName>GrossTurnover__c</fullName>
    <label>Gross Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>