force-app/main/default/objects/FactoringRequest__c/fields/LegalForm__c.field-meta.xml
<CustomField>
    <fullName>LegalForm__c</fullName>
    <label>Legal Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>