force-app/main/default/objects/FactoringRequest__c/fields/LegalRepresentative__c.field-meta.xml
<CustomField>
    <fullName>LegalRepresentative__c</fullName>
    <label>Legal Representative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>