force-app/main/default/objects/FactoringRequest__c/fields/MobileFon__c.field-meta.xml
<CustomField>
    <fullName>MobileFon__c</fullName>
    <label>Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>