force-app/main/default/objects/FactoringRequest__c/fields/RequestID__c.field-meta.xml
<CustomField>
    <fullName>RequestID__c</fullName>
    <externalId>true</externalId>
    <label>Request ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>