force-app/main/default/objects/FactoringRequest__c/fields/VATNumber__c.field-meta.xml
<CustomField>
    <fullName>VATNumber__c</fullName>
    <label>VAT #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>