force-app/main/default/objects/FactoringRequest__c/listViews/AllMYActiveRequests.listView-meta.xml
<ListView>
    <fullName>AllMYActiveRequests</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>WAIT</value>
    </filters>
    <label>All MY Active Requests</label>
</ListView>